# identifier-format-converter

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: idea.rs  main.rs
crates/clt_lib/: Cargo.toml  README.md
crates/clt_lib/src/: conversion.rs  convertion.rs  extraction.rs  extractor.rs  lib.rs
crates/clt_lib/tests/: extractor.rs  file_reading_function.rs  identifying_ability_on_languages.rs
crates/clt_lib/tests/data/: b.txt  java.txt
crates/core/: app.rs  idea.txt  main.rs
crates/naming_clt_lib/: Cargo.toml  README.md
crates/naming_clt_lib/src/: conversion.rs  extraction.rs  lib.rs
crates/naming_clt_lib/tests/: file_reading_function.rs  identifying_ability_on_languages.rs
crates/naming_clt_lib/tests/data/: a.txt  javascript.txt
crates/naming_lib/: Cargo.toml  README.md
crates/naming_lib/src/: converter.rs  detector.rs  identifier.rs  lib.rs  naming_case.rs
crates/naming_lib/tests/: detector.rs  indentifier.rs
crates/naming_lib/tests/common/: mod.rs
doc/: USERGUIDE.md
tests/: default_behaviours.rs  execute_failures.rs  flags_and_options.rs
tests/data/: all.txt
