[package]
name = "naming_clt"
version = "0.1.0"
authors = ["Boholder <boholder@anche.no>"]
description = """
A command line tool to identify and convert the naming format (case | notation) of identifiers.
Use this library to prepare identifier strings for further matching / replacing operation on the source code files.
It is recommended to use it in combination with "xargs -I".
"""
documentation = "https://github.com/boholder/naming"
homepage = "https://github.com/boholder/naming"
repository = "https://github.com/boholder/naming"
keywords = ["source", "code", "naming", "format"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
edition = "2018"

[[bin]]
name = "naming"
path = "crates/cli/main.rs"
bench = false

[workspace]
members = [
    "crates/naming_lib",
]

[dependencies]
clap = "2.33.3"

[profile.release]
debug = 1