[package]
name = "naming_clt"
version = "1.0.0"
authors = ["Boholder <bottleholder@anche.no>"]
description = """
Extract and convert the naming format(case|notation) of identifiers from files.
Use this tool to prepare identifier name strings for further operations
(matching,replacing...) on relative files.
It is recommended to use this tool in combination with "xargs".
"""
documentation = "https://github.com/boholder/naming"
homepage = "https://github.com/boholder/naming"
repository = "https://github.com/boholder/naming"
keywords = ["source", "code", "naming", "format"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
edition = "2018"

[[bin]]
name = "naming"
path = "crates/core/main.rs"
bench = false

[workspace]
members = [
    "crates/naming_lib",
    "crates/clt_lib"
]

[dependencies]
clt_lib = { path = "crates/clt_lib" }

[dependencies.clap]
version = "~2.33"
default-features = false
features = ["suggestions", "color", "vec_map", "wrap_help"]

[dev-dependencies]
assert_cmd = "~2.0.2"

[profile.release]
debug = 1