[package]
name = "naming_clt"
version = "1.0.0"
authors = ["Boholder <bottleholder@anche.no>"]
description = """
Extract and convert the naming format(case|notation) of identifiers from files or stdin.
Use this tool to prepare identifier name strings for further operations
(matching,replacing...) on relative files.
"""
documentation = "https://github.com/boholder/naming"
homepage = "https://github.com/boholder/naming"
repository = "https://github.com/boholder/naming"
keywords = ["code", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
edition = "2018"

[[bin]]
name = "naming"
path = "crates/core/main.rs"
bench = false

[workspace]
members = [
    "crates/naming_lib",
    "crates/clt_lib"
]

[dependencies]
clt_lib = { path = "crates/clt_lib", version = "0.1.0" }
atty = "~0.2.14"

[dependencies.clap]
version = "~2.33"
default-features = false
features = ["suggestions", "color", "vec_map", "wrap_help"]

[dev-dependencies]
assert_cmd = "~2.0.2"
predicates = "~2.0.3"

[profile.release]
debug = 1