[package]
name = "naming_lib"
version = "0.1.0"
authors = ["Boholder <boholder@anche.no>"]
description = """
Library for identifying and converting identifiers naming format.
"""
documentation = "https://github.com/boholder/naming"
homepage = "https://github.com/boholder/naming/tree/master/crates/naming-lib"
repository = "https://github.com/boholder/naming/tree/master/crates/naming-lib"
keywords = ["code", "naming case", "pattern"]
categories = ["text-processing"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8.4"