[package]
name = "naming_lib"
version = "0.1.0"
authors = ["Boholder <bottleholder@anche.no>"]
description = """
Library for identifying and converting identifiers naming format (case | notation).
"""
documentation = "https://docs.rs/naming_lib/0.1.0/naming_lib/"
homepage = "https://docs.rs/naming_lib/0.1.0/naming_lib/"
repository = "https://github.com/boholder/naming/tree/master/crates/naming-lib"
keywords = ["source", "code", "naming", "format"]
categories = ["text-processing"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.8.4"